versions/v3.6.0/doxygen/html/functions_vars.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/functions_vars.html
original_path: doxygen/html/functions_vars.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all variables with links to the structures/unions they belong to:

### - a -

- a : [bt\_addr\_le\_t](structbt__addr__le__t.md#aacada5fc5b04ff22a02518e6f59387ed), [bt\_hci\_rp\_vs\_read\_static\_addrs](structbt__hci__rp__vs__read__static__addrs.md#af8175d96852a67ebcfa4da5019e618e9), [ft8xx\_touch\_transform](structft8xx__touch__transform.md#aebc5352e00847e41b2d239a9265b5e45)
- a0 : [arm\_smccc\_res](structarm__smccc__res.md#a14b8a6dd41e29f6e6be2352e9fda32c3), [sip\_svc\_request](structsip__svc__request.md#a95e4d0bb03bfca90ea78fc19c581ef7f), [sip\_svc\_response](structsip__svc__response.md#a4f413e152dc2ef463140499164c3e410)
- a0\_idx : [gdb\_ctx](structgdb__ctx.md#ac4930a460dc63c823b4e8e13e925c067)
- a1 : [arm\_smccc\_res](structarm__smccc__res.md#a03fc5b45240f7f297e98d05cd9c9f037), [bt\_hci\_vs\_fata\_error\_cpu\_data\_cortex\_m](structbt__hci__vs__fata__error__cpu__data__cortex__m.md#add43bedce9999e88f10cb98f3bbb69ab), [sip\_svc\_request](structsip__svc__request.md#a3b41176de28f042510d5ca5fc9c4678e), [sip\_svc\_response](structsip__svc__response.md#abfb0f411524209388f79f35a82031e79)
- a2 : [arm\_smccc\_res](structarm__smccc__res.md#aff43435dfa582911ff6c162f515cf339), [bt\_hci\_vs\_fata\_error\_cpu\_data\_cortex\_m](structbt__hci__vs__fata__error__cpu__data__cortex__m.md#a7c177a75e51c86faf289d37bff84683c), [sip\_svc\_request](structsip__svc__request.md#aa20d78ab299064e8d4b304f4165bfdf2), [sip\_svc\_response](structsip__svc__response.md#af973d08da13a7dcecf344f3f9d6f118e)
- a3 : [arm\_smccc\_res](structarm__smccc__res.md#a1e1278f6e1474ff238c1b8ed783e56b9), [bt\_hci\_vs\_fata\_error\_cpu\_data\_cortex\_m](structbt__hci__vs__fata__error__cpu__data__cortex__m.md#a3d5e6e7be359a3964ed49051253c428f), [sip\_svc\_request](structsip__svc__request.md#a6cd5c3cf895daad0c600544a903f2eb8), [sip\_svc\_response](structsip__svc__response.md#aac8bb11e4661e59cbce0d6b5d50a0820)
- a4 : [arm\_smccc\_res](structarm__smccc__res.md#a79ba61e5ed6cd00d04ce7fcb9f0c1267), [bt\_hci\_vs\_fata\_error\_cpu\_data\_cortex\_m](structbt__hci__vs__fata__error__cpu__data__cortex__m.md#a2cbd9ac477601f457ea7a1d757aeaf30), [sip\_svc\_request](structsip__svc__request.md#a8d827ae174a2b8f11b50c7e6f31c3708)
- a5 : [arm\_smccc\_res](structarm__smccc__res.md#a85f198052bbbf49f156652f8747598e1), [sip\_svc\_request](structsip__svc__request.md#a67c7626f24035b9cdfef24193e2442c6)
- a6 : [arm\_smccc\_res](structarm__smccc__res.md#a0da7f909d80d1b859072e05790c44426), [sip\_svc\_request](structsip__svc__request.md#a35198a51b070fb2acf76458568204ec1)
- a7 : [arm\_smccc\_res](structarm__smccc__res.md#a0edc6f251808d35bf3747330d06bd155), [sip\_svc\_request](structsip__svc__request.md#af20b0881ec14973d7a6b79f3b146dc7a)
- abort\_matches : [modem\_chat\_script](structmodem__chat__script.md#a2b586e1ff80c22d8ff45829f3e2e7b17)
- abort\_matches\_size : [modem\_chat\_script](structmodem__chat__script.md#aa56bdf520b0f385bc6410b2c6aa2e8d4)
- abp : [lorawan\_join\_config](structlorawan__join__config.md#a0b44703df9ebe466ccf1d7744138daee)
- absolute\_state\_of\_charge : [fuel\_gauge\_prop\_val](unionfuel__gauge__prop__val.md#a33297ff5bf70b510272eddf77ced411e)
- accept : [bt\_iso\_server](structbt__iso__server.md#ae67a000ae524cba53b6bda503568ba38), [bt\_l2cap\_server](structbt__l2cap__server.md#ad31a1908f7dc733f9497164ccabba2af), [bt\_rfcomm\_server](structbt__rfcomm__server.md#a7bcb6da4cd4265c9c3b6439ec8e3a957)
- accept\_call : [bt\_tbs\_cb](structbt__tbs__cb.md#a798c09c04a563800c4d9328c1d9e2de6)
- access : [fs\_mgmt\_file\_access](structfs__mgmt__file__access.md#a3aeeaf6d4243c1aaa7d6129a2ef4a064), [settings\_mgmt\_access](structsettings__mgmt__access.md#a9b798a118844083d77af6db53df5eb37)
- accessed : [segment\_descriptor](structsegment__descriptor.md#aaa5b961b21b18d1efd9987dbfc42ad95)
- ack\_ctx : [bt\_mesh\_cfg\_cli](structbt__mesh__cfg__cli.md#a472bf5015857ab97e1a40ab6cfa70bb1), [bt\_mesh\_health\_cli](structbt__mesh__health__cli.md#ac2ef6ae4fd8e14ad854a9f2c5c80fc43), [bt\_mesh\_large\_comp\_data\_cli](structbt__mesh__large__comp__data__cli.md#afec070cb549d56b3900c4df1e14656ed), [bt\_mesh\_od\_priv\_proxy\_cli](structbt__mesh__od__priv__proxy__cli.md#a8f172612abc904718018a6c2d9002e5e), [bt\_mesh\_priv\_beacon\_cli](structbt__mesh__priv__beacon__cli.md#aa4105b00e2a3ad9027b888f0ebbea23e), [bt\_mesh\_sar\_cfg\_cli](structbt__mesh__sar__cfg__cli.md#a30889368bd4e87efd39b6c456b3510d8), [bt\_mesh\_sol\_pdu\_rpl\_cli](structbt__mesh__sol__pdu__rpl__cli.md#a291134f4b6acc60671307ef3b53c4ac8)
- ack\_delay\_inc : [bt\_mesh\_sar\_rx](structbt__mesh__sar__rx.md#a5517a0f2167340cf59ef6fc72077f010)
- ack\_fpb : [ieee802154\_config](structieee802154__config.md#a3a5e597e53bfcc9e3bed8bac2edb74d2)
- ack\_ie : [ieee802154\_config](structieee802154__config.md#a39c06e32cb4a74b4d8a9864f714e8c93)
- ack\_lock : [ieee802154\_context](structieee802154__context.md#a641c70a792f47431be8a0ffe2635a11f)
- ack\_received : [ppp\_fsm](structppp__fsm.md#a42777bc7c5f904cbac6bb0b16615fb02)
- ack\_requested : [ieee802154\_context](structieee802154__context.md#a511059cb95c0d52c907464a1891586aa)
- ack\_retrans\_count : [bt\_mesh\_sar\_rx](structbt__mesh__sar__rx.md#aac228432bddf7f112ccbcb9e3d05d2ce)
- ack\_seq : [ieee802154\_context](structieee802154__context.md#a0eeefef60bc7c266b2bb26893404ff86)
- ack\_timeout : [coap\_transmission\_parameters](structcoap__transmission__parameters.md#aca76954d785d04312fb834dc524f102c)
- acked : [bt\_mesh\_blob\_target](structbt__mesh__blob__target.md#a4eef4809023e8d4a4ee8beece5e83160)
- ackerr : [net\_stats\_tcp](structnet__stats__tcp.md#a0d40abc85776f0a9b9510a909b7f6d18)
- acl : [bt\_iso\_accept\_info](structbt__iso__accept__info.md#a4225ccc90f1e17e26ce61fe398f506d1), [bt\_iso\_connect\_param](structbt__iso__connect__param.md#aba2f3838e03a1e31699a4623ba93d372)
- acl\_handle : [bt\_hci\_cis](structbt__hci__cis.md#a754c3c75c0ad13a11d89fa3347112e2c), [bt\_hci\_evt\_le\_cis\_req](structbt__hci__evt__le__cis__req.md#af8529013adb87340298a89d4727e6867)
- acl\_max\_len : [bt\_hci\_rp\_le\_read\_buffer\_size\_v2](structbt__hci__rp__le__read__buffer__size__v2.md#ac391149d3d7442e074aad4b98659bd02), [bt\_hci\_rp\_read\_buffer\_size](structbt__hci__rp__read__buffer__size.md#aba3f1597c929e3721c769beb98000218)
- acl\_max\_num : [bt\_hci\_rp\_le\_read\_buffer\_size\_v2](structbt__hci__rp__le__read__buffer__size__v2.md#a1c7938defb076d973b8339c17cc930df), [bt\_hci\_rp\_read\_buffer\_size](structbt__hci__rp__read__buffer__size.md#a87ff361282be71aa60c7f88c50a7492f)
- acl\_mtu : [bt\_hci\_cp\_host\_buffer\_size](structbt__hci__cp__host__buffer__size.md#a07039a81ba81c700a26009ea407744b6)
- acl\_pkts : [bt\_hci\_cp\_host\_buffer\_size](structbt__hci__cp__host__buffer__size.md#a8240837fecc7c50461724b697f0eda47)
- acpi\_rsdp : [efi\_boot\_arg](structefi__boot__arg.md#acbad7866b3242df65d04b95078735829)
- acquisition\_time : [adc\_channel\_cfg](structadc__channel__cfg.md#a426a74cf53a4b801e91c2eeb1db3477d)
- act\_chan\_map\_hi : [pdm\_chan\_cfg](structpdm__chan__cfg.md#a9a91e9341f4c033243effbebd5ffa194)
- act\_chan\_map\_lo : [pdm\_chan\_cfg](structpdm__chan__cfg.md#a34d2e2d03df48e26245835d4df88b60b)
- act\_num\_chan : [pdm\_chan\_cfg](structpdm__chan__cfg.md#a3268169aaee14827cb15778fbc44ceb1)
- act\_num\_streams : [pdm\_chan\_cfg](structpdm__chan__cfg.md#a7614fefd7976ba7b195afb4e81f7100e)
- action : [img\_mgmt\_upload\_check](structimg__mgmt__upload__check.md#aea96e650e2701e6064638dd4c384df55)
- action\_cb : [pm\_device\_base](structpm__device__base.md#abd3a07f0e7c54cb0bee7f835be79dac6)
- activate : [log\_link\_api](structlog__link__api.md#a153036e50cbab5c9bf4e62aeee5b3361)
- active : [k\_p4wq](structk__p4wq.md#afc1544bdca24633b3b30673686b93e9b), [log\_backend\_control\_block](structlog__backend__control__block.md#a99528f4b8d70d7c882c7c1b81b62a168), [mcumgr\_image\_list\_flags](structmcumgr__image__list__flags.md#ade2a01aeeede96070bcdf33ce2d949fb)
- active\_cmd : [shell\_ctx](structshell__ctx.md#a3df8f9a293b4c24d81a80af2d0e0c44e)
- active\_controller : [i3c\_ccc\_deftgts](structi3c__ccc__deftgts.md#a1f59c280bd388eb7e7818eb674b5f12f)
- active\_scan : [bt\_mesh\_rpr\_caps](structbt__mesh__rpr__caps.md#a2de75ef667698a6094051a71ba9808ce)
- active\_time\_ms : [gnss\_periodic\_config](structgnss__periodic__config.md#a8255a68714bcc23af57d21639df5264b)
- actual\_key\_mask : [input\_kbd\_matrix\_common\_config](structinput__kbd__matrix__common__config.md#ac2343c08359099f383f154655b371cf6)
- ad : [cipher\_aead\_pkt](structcipher__aead__pkt.md#a1b00939c8409041b8202ae90ee01a41c)
- ad\_len : [cipher\_aead\_pkt](structcipher__aead__pkt.md#a2964d6ffbe02b7088be9a2d5c21a2f9c)
- add\_mapping : [xen\_domctl\_memory\_mapping](structxen__domctl__memory__mapping.md#aac26188fd1ddf8a841755a078c4e73ab)
- add\_src : [bt\_bap\_broadcast\_assistant\_cb](structbt__bap__broadcast__assistant__cb.md#ad909b9e6e3c35be10a29ee5a4b7213fb)
- additional\_fragment\_size : [ethernet\_qbu\_param](structethernet__qbu__param.md#afb455507b29d84de42638e47ecacadeb)
- addr : [bt\_bap\_broadcast\_assistant\_add\_src\_param](structbt__bap__broadcast__assistant__add__src__param.md#a2b04d75ca9a740a7d819eae1bcc5cba7), [bt\_bap\_scan\_delegator\_recv\_state](structbt__bap__scan__delegator__recv__state.md#a6153ea6bbfe7057c39f6b652a4e6e34e), [bt\_bond\_info](structbt__bond__info.md#a6b328ce30fd53bb73ecd8e033bb91d1f), [bt\_br\_discovery\_result](structbt__br__discovery__result.md#a833b05883132a0c20690f71b2c14a62a), [bt\_br\_oob](structbt__br__oob.md#a9b9f4c830a4e48736ac6b793d628ee98), [bt\_cap\_commander\_broadcast\_reception\_start\_member\_param](structbt__cap__commander__broadcast__reception__start__member__param.md#a93d6b4c76e730f282d24b2086c10aa3e), [bt\_hci\_cp\_le\_add\_dev\_to\_fal](structbt__hci__cp__le__add__dev__to__fal.md#a11ec9f3cd9b80f34094e70d8eeb13be3), [bt\_hci\_cp\_le\_add\_dev\_to\_per\_adv\_list](structbt__hci__cp__le__add__dev__to__per__adv__list.md#ad93d72bfa7e4123ee9728f6bf73b69df), [bt\_hci\_cp\_le\_per\_adv\_create\_sync](structbt__hci__cp__le__per__adv__create__sync.md#a3a0a0bc1bd5014f2ede0c4ef6cc30d24), [bt\_hci\_cp\_le\_rem\_dev\_from\_fal](structbt__hci__cp__le__rem__dev__from__fal.md#afe6054303093cc930d1089ca6a16101c), [bt\_hci\_cp\_le\_rem\_dev\_from\_per\_adv\_list](structbt__hci__cp__le__rem__dev__from__per__adv__list.md#adc420288f6a79c1a92f57241d3da3d81), [bt\_hci\_evt\_extended\_inquiry\_result](structbt__hci__evt__extended__inquiry__result.md#a955a7d36736badfae1f39fa9eda61ebb), [bt\_hci\_evt\_inquiry\_result\_with\_rssi](structbt__hci__evt__inquiry__result__with__rssi.md#af955dd1660f83e41e6d1b2b5aecf8133), [bt\_hci\_evt\_le\_advertising\_info](structbt__hci__evt__le__advertising__info.md#a1d6863f1a601a2df9d772e3cc1fec118), [bt\_hci\_evt\_le\_direct\_adv\_info](structbt__hci__evt__le__direct__adv__info.md#a66bbb3e53d84e8c39b216edf91ad131d), [bt\_hci\_evt\_le\_ext\_advertising\_info](structbt__hci__evt__le__ext__advertising__info.md#acec6858e41ae1b44a2a2ee6d6dbc294d), [bt\_hci\_evt\_le\_past\_received](structbt__hci__evt__le__past__received.md#a3e368e95a6831f823d2efa0c0bc1ef51), [bt\_hci\_evt\_le\_past\_received\_v2](structbt__hci__evt__le__past__received__v2.md#aff78554e8980635290767e9877ac479b), [bt\_hci\_evt\_le\_scan\_req\_received](structbt__hci__evt__le__scan__req__received.md#a7dca5ad876dc97859a139d8bd4b207af), [bt\_hci\_evt\_mesh\_scan\_report](structbt__hci__evt__mesh__scan__report.md#a20d5ffe0df68bee1205a5ee1a5abd6b2), [bt\_hci\_evt\_vs\_scan\_req\_rx](structbt__hci__evt__vs__scan__req__rx.md#a56613220a50bc50a771f432b7e617d5b), [bt\_iso\_biginfo](structbt__iso__biginfo.md#aa7dbfd342eecf8ffc2fce9d3fa7209ea), [bt\_le\_ext\_adv\_info](structbt__le__ext__adv__info.md#a0dd0aa8a26fe1ef5813fa07732c5c4c9), [bt\_le\_ext\_adv\_scanned\_info](structbt__le__ext__adv__scanned__info.md#a4431f157891d2c1a7d0e40f7e879ac3d), [bt\_le\_oob](structbt__le__oob.md#a17cfed7683efbf5b5954847d655d7424), [bt\_le\_per\_adv\_sync\_info](structbt__le__per__adv__sync__info.md#ac10fc2e2d3ec2160db8c2aac148d18a2), [bt\_le\_per\_adv\_sync\_param](structbt__le__per__adv__sync__param.md#ac93adedad747f61a771ac5445e486b74), [bt\_le\_per\_adv\_sync\_recv\_info](structbt__le__per__adv__sync__recv__info.md#a5817bd4fba2c93adebcebe007650b6eb), [bt\_le\_per\_adv\_sync\_synced\_info](structbt__le__per__adv__sync__synced__info.md#a7ca99b0596b08d153d3ba5310adab125), [bt\_le\_per\_adv\_sync\_term\_info](structbt__le__per__adv__sync__term__info.md#a2b76ccd5e4c9933f2c05db2ec5b8e2fc), [bt\_le\_scan\_recv\_info](structbt__le__scan__recv__info.md#a907fb7ec3c78d68da5015a8c3afc3084), [bt\_mesh\_blob\_target](structbt__mesh__blob__target.md#ab4c032f92a4ec12e4bbd6fa84139c085), [bt\_mesh\_cdb\_node](structbt__mesh__cdb__node.md#a8c9941929a8ce6228817d76fe4e2375c), [bt\_mesh\_cfg\_cli\_mod\_pub](structbt__mesh__cfg__cli__mod__pub.md#ab52dd35df271ae5bd70a4640e6f3bea8), [bt\_mesh\_dfu\_cli](structbt__mesh__dfu__cli.md#a67450510328c50e52fa97c80903508cd), [bt\_mesh\_elem::bt\_mesh\_elem\_rt\_ctx](structbt__mesh__elem_1_1bt__mesh__elem__rt__ctx.md#a659279b38f1f3e015ebc648901577038), [bt\_mesh\_model\_pub](structbt__mesh__model__pub.md#a408c9185168b962f7e7314f9a429fe8c), [bt\_mesh\_msg\_ctx](structbt__mesh__msg__ctx.md#a2ead7791000e9a55ed1b92c40b84bc7a), [bt\_mesh\_rpr\_node](structbt__mesh__rpr__node.md#a10ec7b9c480513e742566c6c3b9c4973), [coap\_observer](structcoap__observer.md#a9b6f807a0fc5d141e0ee3dd9596c3c82), [coap\_pending](structcoap__pending.md#adcc34b0d0201a24b15a5adca89ae0da3), [http\_parser](structhttp__parser.md#aecffbbbfebfc4f4a8cb4c034d18ef375), [i2c\_dt\_spec](structi2c__dt__spec.md#a85242ab56b1e8633b7001353990392fa), [i2c\_emul](structi2c__emul.md#a8d3924790bd825afe41095bfdf0087eb), [i3c\_ccc\_address](structi3c__ccc__address.md#afc3d7db034b3fd72c6118790a18a677b), [i3c\_ccc\_deftgts\_active\_controller](structi3c__ccc__deftgts__active__controller.md#a4d7671db542bb70ef623be26804c154a), [i3c\_ccc\_deftgts\_target](structi3c__ccc__deftgts__target.md#a34a02df3d4dc456733746437b2cd983a), [i3c\_ccc\_setbrgtgt\_tgt](structi3c__ccc__setbrgtgt__tgt.md#a6fa24f8354e856031464aaaa2c8fd1bb), [i3c\_ccc\_target\_payload](structi3c__ccc__target__payload.md#a2669978506b20ef01569357fbd3a9eef), [i3c\_i2c\_device\_desc](structi3c__i2c__device__desc.md#a5826aa935faccf9b9f05cf52b2fb842d), [ieee802154\_config](structieee802154__config.md#a673f5cceb6439bc1c3527c62062151d1), [ieee802154\_req\_params](structieee802154__req__params.md#aa1b2ea9ffb009a1b6255a9e57ddef9f7), [llext\_const\_symbol](structllext__const__symbol.md#ac0bb3e3c67e91f790a1284f3ebc260b2), [llext\_symbol](structllext__symbol.md#ae9d19614618dc3c000f3c4e71dbda5ac), [net\_event\_ipv6\_addr](structnet__event__ipv6__addr.md#a3cb4dd6d1e33ef2769cd64fa27c69b43), [net\_event\_ipv6\_nbr](structnet__event__ipv6__nbr.md#a75653facd98b568c300395c45191b289), [net\_event\_ipv6\_prefix](structnet__event__ipv6__prefix.md#a5ccae593ce7678fcdd91a4d0eaf142fb), [net\_event\_ipv6\_route](structnet__event__ipv6__route.md#a42bb70c6b92841e5a77c80a3a193178c), [net\_linkaddr](structnet__linkaddr.md#a2176a9f7a444ac3b0108102d8cf852f0), [net\_linkaddr\_storage](structnet__linkaddr__storage.md#ae37b0b74f3d2b7ec09e2c2022e86c0bb), [no\_bus\_emul](structno__bus__emul.md#aee2b4297901108a071658fa07e56043f), [npcx\_ex\_ops\_uma\_in](structnpcx__ex__ops__uma__in.md#a4fe44cf0e3b09193700a72b62b78f544), [peci\_msg](structpeci__msg.md#aa4d6785fc79059dc7e8574010bc29e4c), [shared\_multi\_heap\_region](structshared__multi__heap__region.md#a905df61648eaa18cebf53bb10dcde91d), [smbus\_callback](structsmbus__callback.md#a707cc2c4cd2abf214343686d84cd1594), [smbus\_dt\_spec](structsmbus__dt__spec.md#a0f6080e33e04405a42e9d29118512d08), [sys\_mm\_drv\_region](structsys__mm__drv__region.md#a8dfa465f83cf5f6115094b6b5727f418), [udc\_ep\_config](structudc__ep__config.md#ac795b839cbd426d233a1f91d10d5fc7e), [uhc\_transfer](structuhc__transfer.md#a3dbfba5c7d22b69c320fd91079797a2c), [zperf\_download\_params](structzperf__download__params.md#a92e0a7d21f1a88933a9ec95fda71c84b)
- addr\_before\_status : [udc\_device\_caps](structudc__device__caps.md#aefef262532e3eab3baa90eb8e79f9dc8)
- addr\_count : [npcx\_ex\_ops\_uma\_in](structnpcx__ex__ops__uma__in.md#a3c950c4208da78e2908a116ea3eedd5f)
- addr\_slots : [i3c\_dev\_attached\_list](structi3c__dev__attached__list.md#ab5aba9e4e47d3acedc88754946e21474)
- addr\_state : [net\_if\_addr](structnet__if__addr.md#a3106fdcf0dd2479c95efafc586217a2c)
- addr\_type : [bt\_hci\_cp\_le\_set\_scan\_param](structbt__hci__cp__le__set__scan__param.md#a694c74a6fc95f767d2e89e6596d51e98), [net\_if\_addr](structnet__if__addr.md#ab4fd41001cc24615803bfabb9d48e7eb)
- address : [espi\_request\_packet](structespi__request__packet.md#a4ac2d50786fdc4c4bd8da88bde28f77d), [i2c\_target\_config](structi2c__target__config.md#a5d531acec2b530a21b8d646ce321b6fd), [i3c\_target\_config](structi3c__target__config.md#a89b7f8bd52beec7dd733ab6dd1111758), [ipcp\_options](structipcp__options.md#a2d4a41b74c4a319551c003210c1e6f3d), [net\_if\_addr](structnet__if__addr.md#a06b8d2e8b5ea6d8d671800d966163763), [net\_if\_mcast\_addr](structnet__if__mcast__addr.md#a3e470fc2eb02ac9e5d3d7d0bea0aaa69), [net\_if\_router](structnet__if__router.md#a86a2ca1b95e348acbde8ce90986b83db), [osdp\_cmd\_comset](structosdp__cmd__comset.md#af318dc8d5c8148902a2f824d72120ddc)
- address\_64\_bit\_support\_v3 : [sdhc\_host\_caps](structsdhc__host__caps.md#a0f33c7e168ade12675795d2c0d5b5ea2)
- address\_64\_bit\_support\_v4 : [sdhc\_host\_caps](structsdhc__host__caps.md#ad8e4ca0d2fb39486b469224218d2eb7b)
- address\_bits : [xen\_memory\_reservation](structxen__memory__reservation.md#a18732ad7ad5cde2ab44cef84af689ee2)
- address\_size : [xen\_domctl](structxen__domctl.md#acf33e4ac5d83e482ded6d0fbaae75e19)
- adjust : [ptp\_clock\_driver\_api](structptp__clock__driver__api.md#a7177e1fb271aacbae2a081ef41eb585c)
- adma3\_support : [sdhc\_host\_caps](structsdhc__host__caps.md#a90a90218bcd866cbfae2354c5b0af3de)
- adma\_2\_support : [sdhc\_host\_caps](structsdhc__host__caps.md#acfa1c5e96f2afeab40185a1ef37d7efb)
- adv\_addr : [bt\_hci\_evt\_le\_per\_adv\_sync\_established](structbt__hci__evt__le__per__adv__sync__established.md#adf65527ea968f4ece37d7e3c91c795d1), [bt\_hci\_evt\_le\_per\_adv\_sync\_established\_v2](structbt__hci__evt__le__per__adv__sync__established__v2.md#abd67ec989479eb793e7bf99a4cf371b8)
- adv\_handle : [bt\_hci\_cp\_le\_create\_big](structbt__hci__cp__le__create__big.md#aa686eec31ca4c831262dd34d41f9a1fb), [bt\_hci\_cp\_le\_create\_big\_test](structbt__hci__cp__le__create__big__test.md#aece09ae6264e0cc1a5548f1603a3f61a), [bt\_hci\_cp\_le\_ext\_create\_conn\_v2](structbt__hci__cp__le__ext__create__conn__v2.md#addf1f80c4d3625e0c6d6e716f6e2e207), [bt\_hci\_cp\_le\_per\_adv\_set\_info\_transfer](structbt__hci__cp__le__per__adv__set__info__transfer.md#a75b2c0fa1d50ef9d3761ac25f487750b), [bt\_hci\_cp\_le\_set\_pawr\_subevent\_data](structbt__hci__cp__le__set__pawr__subevent__data.md#a47d84125d15cce1fc969db3e5caa07e1), [bt\_hci\_evt\_le\_adv\_set\_terminated](structbt__hci__evt__le__adv__set__terminated.md#af35564406269144cfa2532cd510aa0bd), [bt\_hci\_evt\_le\_enh\_conn\_complete\_v2](structbt__hci__evt__le__enh__conn__complete__v2.md#a883ba3aed9aed00ec0ce425999d97180), [bt\_hci\_evt\_le\_per\_adv\_response\_report](structbt__hci__evt__le__per__adv__response__report.md#a9d746015a9c2b48c54008319c892b063), [bt\_hci\_evt\_le\_per\_adv\_subevent\_data\_request](structbt__hci__evt__le__per__adv__subevent__data__request.md#ae6f6ef17edabfd210a7e6597087ff512)
- adv\_info : [bt\_hci\_evt\_le\_advertising\_report](structbt__hci__evt__le__advertising__report.md#a9762be19de1f24be4d4626e7e2f8205d), [bt\_hci\_evt\_le\_ext\_advertising\_report](structbt__hci__evt__le__ext__advertising__report.md#a84b9c47a79ccea04198721e2f05ac1a8)
- adv\_props : [bt\_le\_scan\_recv\_info](structbt__le__scan__recv__info.md#af29ddfb59e286af9ca465cbd5a91bf2d)
- adv\_sid : [bt\_bap\_broadcast\_assistant\_add\_src\_param](structbt__bap__broadcast__assistant__add__src__param.md#a390cd8d887cd256ee74b39b9b516cac4), [bt\_bap\_scan\_delegator\_recv\_state](structbt__bap__scan__delegator__recv__state.md#aa03e02a1832950e4a53ff2fe803c14a6), [bt\_cap\_commander\_broadcast\_reception\_start\_member\_param](structbt__cap__commander__broadcast__reception__start__member__param.md#acc52738756124db042ea884c82163362), [bt\_hci\_evt\_le\_past\_received](structbt__hci__evt__le__past__received.md#a110c7cdd2ff1178d1ca686abaae92b05), [bt\_hci\_evt\_le\_past\_received\_v2](structbt__hci__evt__le__past__received__v2.md#a05d798c9415541ef7f5716992157b1a1)
- adv\_slot : [bt\_hci\_cp\_mesh\_advertise](structbt__hci__cp__mesh__advertise.md#a7ec17216955ac784cd213b11038c3521), [bt\_hci\_cp\_mesh\_advertise\_cancel](structbt__hci__cp__mesh__advertise__cancel.md#acd1409f2299c6bbddffd62d5e10e6e7c), [bt\_hci\_cp\_mesh\_advertise\_timed](structbt__hci__cp__mesh__advertise__timed.md#a92f0163ec0854296ab76e49741d45196), [bt\_hci\_evt\_mesh\_adv\_complete](structbt__hci__evt__mesh__adv__complete.md#a2c9240a7fa61dad2c7a29b1ad4e555b1), [bt\_hci\_rp\_mesh\_advertise](structbt__hci__rp__mesh__advertise.md#a0b88358de3223b528cdd424db25f05a0), [bt\_hci\_rp\_mesh\_advertise\_cancel](structbt__hci__rp__mesh__advertise__cancel.md#afd121f3bb6d3453e7ec0bd9b895a3ccb), [bt\_hci\_rp\_mesh\_advertise\_timed](structbt__hci__rp__mesh__advertise__timed.md#a17b39cd87b8392ef1ac7d721a55f6fab)
- adv\_type : [bt\_le\_scan\_recv\_info](structbt__le__scan__recv__info.md#adccb2ce5c6d228bd7f8f050088629524)
- after : [ztest\_suite\_node](structztest__suite__node.md#a46ec271d4a7625b01daac27899d5eae4)
- age : [coap\_reply](structcoap__reply.md#aea6b98e109e270c08df1554c5eee65fe), [coap\_resource](structcoap__resource.md#ae8e1b2b1920689913e0910a82a30e009)
- ai\_addr : [dns\_addrinfo](structdns__addrinfo.md#a254fcceb59e65cb425c19825b28c3d37), [zsock\_addrinfo](structzsock__addrinfo.md#acd0173c9e99bb72b444c18f4237bf17b)
- ai\_addrlen : [dns\_addrinfo](structdns__addrinfo.md#ad70149a624f91ec49ac4121aba5d3799), [zsock\_addrinfo](structzsock__addrinfo.md#afeb3c893f19642352f79404dbe5443b2)
- ai\_canonname : [dns\_addrinfo](structdns__addrinfo.md#a21db6675aef2f8bafb83846343eae9ce), [zsock\_addrinfo](structzsock__addrinfo.md#aa9a96f1d5d49833beea05558879867cf)
- ai\_family : [dns\_addrinfo](structdns__addrinfo.md#af9a9458751ddb65219f3b5f6730df558), [zsock\_addrinfo](structzsock__addrinfo.md#a83ef78e3347e69564e2663a769356d87)
- ai\_flags : [zsock\_addrinfo](structzsock__addrinfo.md#a971514adde66f5c1a04efc7f42f244d1)
- ai\_next : [zsock\_addrinfo](structzsock__addrinfo.md#a7fdc7a266b2f96766f8c4e79649bfa65)
- ai\_protocol : [zsock\_addrinfo](structzsock__addrinfo.md#aae090dcd0c1e73497560cbcc333a452d)
- ai\_socktype : [zsock\_addrinfo](structzsock__addrinfo.md#adcb8a732921a11a35f89241cfe413b78)
- aics : [bt\_micp\_included](structbt__micp__included.md#a2afddd15bd726039682151038b2415d1), [bt\_vcp\_included](structbt__vcp__included.md#aa6c87b8c9b4b2be6ec6429fd2ee68398)
- aics\_cb : [bt\_vcp\_vol\_ctlr\_cb](structbt__vcp__vol__ctlr__cb.md#a430b1ee27c9bf7d6c7f8498748d91b21)
- aics\_cnt : [bt\_micp\_included](structbt__micp__included.md#a32cff1b68d96319958eeba66f249cd67), [bt\_vcp\_included](structbt__vcp__included.md#af521bb12ebef4c5f60609040140474c0)
- aics\_param : [bt\_vcp\_vol\_rend\_register\_param](structbt__vcp__vol__rend__register__param.md#a1e3a4744de697d92d0fc8b9e27593417)
- air\_mode : [bt\_hci\_evt\_sync\_conn\_complete](structbt__hci__evt__sync__conn__complete.md#a5f6068569bf649bcd1d13928f56f9703)
- alert\_handler\_cb : [tcpc\_driver\_api](structtcpc__driver__api.md#a271fc8d67338a4e7384d4f938026a5f3)
- algorithms : [bt\_mesh\_dev\_capabilities](structbt__mesh__dev__capabilities.md#a762786d98c070d0ae79e09f22bad4b33)
- align\_shift : [json\_obj\_descr](structjson__obj__descr.md#a475717ac4dd01296c01468450e50f75b)
- alignment : [gdb\_mem\_region](structgdb__mem__region.md#aa714bde657eb3572367a924298dd927f)
- all : [gptp\_flags](structgptp__flags.md#a36871fbae0484379b00c415affdb3f9d)
- all\_format\_specified : [os\_mgmt\_info\_append](structos__mgmt__info__append.md#abf016939fbc1d0aaba9712dfacf2d04f)
- all\_phys : [bt\_hci\_cp\_le\_set\_default\_phy](structbt__hci__cp__le__set__default__phy.md#abe1d83e372e874739588812040d0b540), [bt\_hci\_cp\_le\_set\_phy](structbt__hci__cp__le__set__phy.md#afb8d056dc7d8824eec0ef16fdf9ce924)
- alloc : [bt\_ots\_obj\_size](structbt__ots__obj__size.md#a86a5675532eae69d40b3305436e81cfb), [net\_buf\_data\_cb](structnet__buf__data__cb.md#a34bf941a262975eef4ff1c6e14a0c78f), [net\_buf\_pool](structnet__buf__pool.md#a617bd8f77e55481d97183da8c0c62cc5)
- alloc\_buf : [bt\_iso\_chan\_ops](structbt__iso__chan__ops.md#a7bf9fe04f42bacd59f623aa28a3b0665), [bt\_l2cap\_chan\_ops](structbt__l2cap__chan__ops.md#ab973539dd8b5e3ab115042a03362f141)
- alloc\_cb : [heap\_listener](structheap__listener.md#a34a982da6ecc3564ef2194f045eea646)
- alloc\_data : [net\_buf\_data\_alloc](structnet__buf__data__alloc.md#adcc085065789af4a8e641c2ad7e670af)
- alloc\_func : [sys\_hashmap](structsys__hashmap.md#ad1cf742360a600ee20c89d68ea42b3f8)
- alloc\_intid : [its\_driver\_api](structits__driver__api.md#affc7190b95d16fa0223f6fd7b1ae9c14)
- alloc\_seg : [bt\_l2cap\_chan\_ops](structbt__l2cap__chan__ops.md#abb165dbe118dfbb3577d3e56a00a5735)
- alloc\_size : [llext](structllext.md#a566e46e600e9b90f9d4b570ef007e6a6)
- allocate\_entries : [vtd\_driver\_api](structvtd__driver__api.md#a3177c806bd86ebe4dc6c94141c9d5f04)
- allocated\_bytes : [sys\_memory\_stats](structsys__memory__stats.md#a5592af7e45f38f79447fd8b81cfa1285)
- allow\_access : [xen\_domctl\_iomem\_permission](structxen__domctl__iomem__permission.md#a6349bda6c7f561fe5d58038b5c0cadeb)
- allow\_role\_switch : [bt\_br\_conn\_param](structbt__br__conn__param.md#a95454a74932a14b4137c3fe82821be49), [bt\_hci\_cp\_connect](structbt__hci__cp__connect.md#a7a3d772bfd4c83236f9f1ad657e33f17)
- allow\_tx : [eth\_bridge\_iface\_context](structeth__bridge__iface__context.md#a278c0a37617e9e5639f28220dc9ef7a0)
- alm0\_en : [mcp7940n\_rtc\_control](structmcp7940n__rtc__control.md#a7b5bac46017674dceeef43e1b23b49b0)
- alm1\_en : [mcp7940n\_rtc\_control](structmcp7940n__rtc__control.md#acd7bba87747ab836427d8a81ff34791a)
- alm\_date : [mcp7940n\_alarm\_registers](structmcp7940n__alarm__registers.md#aadf6522ed74b6a29de42b871d81c02dd)
- alm\_hours : [mcp7940n\_alarm\_registers](structmcp7940n__alarm__registers.md#a25ebc6d4e4c8f17f38d100f6e3e87404)
- alm\_if : [mcp7940n\_alm\_weekday](structmcp7940n__alm__weekday.md#af0c373dc09f47fe36a7ec203bfa8ab5c)
- alm\_min : [mcp7940n\_alarm\_registers](structmcp7940n__alarm__registers.md#aa7b921fad0f40df38c8ac8cab2c620b6)
- alm\_month : [mcp7940n\_alarm\_registers](structmcp7940n__alarm__registers.md#a0b5cd03aadccd31b5f432aa3a728e62d)
- alm\_msk : [mcp7940n\_alm\_weekday](structmcp7940n__alm__weekday.md#ab32d6feecbc378727fb463e81d70420c)
- alm\_pol : [mcp7940n\_alm\_weekday](structmcp7940n__alm__weekday.md#a66362fcb6c0ec7c8dac4f4a224ec9ab2)
- alm\_sec : [mcp7940n\_alarm\_registers](structmcp7940n__alarm__registers.md#a2d46f94bcd97e2ff3e1e85a3fb43539e)
- alm\_weekday : [mcp7940n\_alarm\_registers](structmcp7940n__alarm__registers.md#a91cf619c5d0a481c944b76183c3c74a5)
- alt : [sim7080\_gnss\_data](structsim7080__gnss__data.md#aa481937aedd2817e3a301663648d9f7d)
- alternate : [usbd\_ch9\_data](structusbd__ch9__data.md#a8f831eca1974b8411072f8102c444d45)
- altfuncclr : [gpio\_cmsdk\_ahb](structgpio__cmsdk__ahb.md#a325a85d7d5fa3830ee9a7e922bed08ae)
- altfuncset : [gpio\_cmsdk\_ahb](structgpio__cmsdk__ahb.md#a5f70dc42911502ff96254f44ff385caa)
- altitude : [navigation\_data](structnavigation__data.md#addd80254be4619c4ea7707f9c9bc434e)
- always\_0\_0 : [segment\_descriptor](structsegment__descriptor.md#a17006cb3ba7efd21a951e882e34b088d)
- angle : [sensor\_q31\_data::sensor\_q31\_sample\_data](structsensor__q31__data_1_1sensor__q31__sample__data.md#a9e58a7ea902e27b02b34cc8f619aca96)
- anmf : [can\_mcan\_rx\_fifo\_hdr](structcan__mcan__rx__fifo__hdr.md#a6256e635694330dc3428f30387838f96)
- announce : [wifi\_twt\_flow\_info](structwifi__twt__flow__info.md#afc81a5111c265fd9bb2aca5f9510bfa8), [wifi\_twt\_params](structwifi__twt__params.md#a02f2d822d530e5376f256503439a54f9)
- ant\_ids : [bt\_df\_adv\_cte\_tx\_param](structbt__df__adv__cte__tx__param.md#ac1f251cb2205ce345dc3815b53f13918), [bt\_df\_conn\_cte\_rx\_param](structbt__df__conn__cte__rx__param.md#a35c2aac4512e2ffce19346c9bf51f033), [bt\_df\_conn\_cte\_tx\_param](structbt__df__conn__cte__tx__param.md#a9df1dac6180e77a4c7abc80890346c4a), [bt\_df\_per\_adv\_sync\_cte\_rx\_param](structbt__df__per__adv__sync__cte__rx__param.md#ac83de1a86fef076d6c8fc6bccbe49a64), [bt\_hci\_cp\_le\_rx\_test\_v3](structbt__hci__cp__le__rx__test__v3.md#aa6cd0835068f378949da182af13e2438), [bt\_hci\_cp\_le\_set\_cl\_cte\_sampling\_enable](structbt__hci__cp__le__set__cl__cte__sampling__enable.md#a67bb2dbfe1707f76a5e211e007459c22), [bt\_hci\_cp\_le\_set\_cl\_cte\_tx\_params](structbt__hci__cp__le__set__cl__cte__tx__params.md#a27a228653ea560a77369a6b1829a8a9d), [bt\_hci\_cp\_le\_set\_conn\_cte\_rx\_params](structbt__hci__cp__le__set__conn__cte__rx__params.md#a519c37f5d797d8ddac5ba9be7c14b9f9), [bt\_hci\_cp\_le\_set\_conn\_cte\_tx\_params](structbt__hci__cp__le__set__conn__cte__tx__params.md#abff85d652b3b2fd55ad78e53887cd7ce), [bt\_hci\_cp\_le\_tx\_test\_v3](structbt__hci__cp__le__tx__test__v3.md#afdb6dd44108e9a4a21ac31a74c1e083f), [bt\_hci\_cp\_le\_tx\_test\_v4](structbt__hci__cp__le__tx__test__v4.md#a3fe8ab7c0ee389dce8592cb7a38bc42c)
- ap\_attr : [k\_mem\_partition\_attr\_t](structk__mem__partition__attr__t.md#aeb16f8a8402a7190081ac96093189f27)
- ap\_disable : [wifi\_mgmt\_ops](structwifi__mgmt__ops.md#a5aa7a2be82eb1783872abda2b8978235)
- ap\_enable : [wifi\_mgmt\_ops](structwifi__mgmt__ops.md#ac2ce3a4a86c43e30d33261f71c44198a)
- ap\_sta\_disconnect : [wifi\_mgmt\_ops](structwifi__mgmt__ops.md#af01aaec29be78c02314acf13b5c1b6f7)
- ap\_sta\_info : [wifi\_mgmt\_events](unionwifi__mgmt__events.md#a08c4882a4bbefc5fa82198cee2e3b344)
- ap\_status : [wifi\_status](structwifi__status.md#a02f0fcc7ef57661ca95d0c99f045aef1)
- api : [conn\_mgr\_conn\_impl](structconn__mgr__conn__impl.md#a1229707a1b919659647412cb1eecd61b), [device](structdevice.md#a4a2e6a2cfeb6efed7d5383c33458f46d), [ec\_host\_cmd\_backend](structec__host__cmd__backend.md#aadf44f4eff331abeca40bc0f69bc173d), [espi\_emul](structespi__emul.md#a1c80c40cdc25bb5440d57c3aef7379eb), [i2c\_emul](structi2c__emul.md#a7e6f7e6e69064df666584027c94bf98c), [input\_kbd\_matrix\_common\_config](structinput__kbd__matrix__common__config.md#ace0bafa079826819b7df7950cb3e8212), [log\_backend](structlog__backend.md#a87067e427a94d3543c7c50b950649b33), [log\_link](structlog__link.md#a1df7a4c08d3488a68b7058a018c92e46), [no\_bus\_emul](structno__bus__emul.md#a9d4274ae11784a6c6e9892b1bde89780), [rtio\_iodev](structrtio__iodev.md#a6dfedbfb58356e0647e5c20632656977), [shell\_transport](structshell__transport.md#ab4bee270415b445ded5a8ba6e8cb3a25), [spi\_emul](structspi__emul.md#a96649e8ea8360ad07ebbd721f999b0e7), [sys\_hashmap](structsys__hashmap.md#a88b8b0e3773a5f388bd5362b7283c5a9), [usbd\_class\_node](structusbd__class__node.md#a276df79bf269b19875f1c497a36392fb)
- app\_eui : [lorawan\_join\_abp](structlorawan__join__abp.md#a7a409fa2f3761c49085818768a62d216)
- app\_idx : [bt\_mesh\_blob\_cli\_inputs](structbt__mesh__blob__cli__inputs.md#a7fb308f895c57b66b50e1ab060228cb3), [bt\_mesh\_blob\_srv::bt\_mesh\_blob\_srv\_state](structbt__mesh__blob__srv_1_1bt__mesh__blob__srv__state.md#a6273d55eda23f868d51382c56bc41e27), [bt\_mesh\_cdb\_app\_key](structbt__mesh__cdb__app__key.md#a2ef7f5d832b36736d3a1811a407b6fa6), [bt\_mesh\_cfg\_cli\_mod\_pub](structbt__mesh__cfg__cli__mod__pub.md#aefbe5449a10379b064dea054300cb9a0), [bt\_mesh\_msg\_ctx](structbt__mesh__msg__ctx.md#a58de4d7cef6a8236a6517fc0bd961917), [bt\_mesh\_shell\_target](structbt__mesh__shell__target.md#a52c511cf9843512ec6d8db7cec6f6fa1)
- app\_key : [bt\_mesh\_cdb\_app\_key](structbt__mesh__cdb__app__key.md#a2d685a7dd5e1f4678c34ea72be3fe6a2), [lorawan\_join\_otaa](structlorawan__join__otaa.md#a28dd704e28d0bed909c3e85e516c85ea)
- app\_key\_list : [bt\_mesh\_cfg\_cli\_cb](structbt__mesh__cfg__cli__cb.md#ac331fc103d0f331093929f39e5b9d6ba)
- app\_key\_status : [bt\_mesh\_cfg\_cli\_cb](structbt__mesh__cfg__cli__cb.md#a48ef4d0665d86d069b90533eb18e0fd0)
- app\_keys : [bt\_mesh\_cdb](structbt__mesh__cdb.md#a59a130ffed26c362dc72d57d1ac7d7fd)
- app\_sessn\_state : [cipher\_ctx](structcipher__ctx.md#a0439c7f7c300a59296d353e76132c028)
- app\_skey : [lorawan\_join\_abp](structlorawan__join__abp.md#a8019bead1dfdda7a0b05f35f128edca5)
- application : [sd\_cid](structsd__cid.md#a11ec5fa23ae13ee084c093b27c1d381a)
- applied : [bt\_mesh\_dfu\_cli\_cb](structbt__mesh__dfu__cli__cb.md#a6f580db9629d81f72c79d00a5aea2de4)
- apply : [bt\_mesh\_dfd\_srv](structbt__mesh__dfd__srv.md#af1ac88ae8d9e1e42ff8a98d3969c359d), [bt\_mesh\_dfu\_srv\_cb](structbt__mesh__dfu__srv__cb.md#afe4b6ca9f56938695addba6ecc18bb4b)
- ar\_idx : [gdb\_ctx](structgdb__ctx.md#ae73c7bcb4e501c9f28308838f0923cd0)
- arch : [k\_thread](structk__thread.md#a0fa3dd64d03f6eef06320b51b0623301), [msi\_vector](structmsi__vector.md#aec3f368bdbe75d9e53d6bc9b0f6a18a7), [shared\_info](structshared__info.md#a4eab2a6ca5ab006c3d3d0cd938dfa7f7), [vcpu\_info](structvcpu__info.md#a433f67b9e1c989e316d04d5976804c0a), [xen\_domctl\_createdomain](structxen__domctl__createdomain.md#a63186466661618e0f70ac2f2d37f8953)
- arch\_config : [xen\_domctl\_getdomaininfo](structxen__domctl__getdomaininfo.md#a5b8ed09273407167af2dc9b62da61cd3)
- area : [bt\_mesh\_blob\_io\_flash](structbt__mesh__blob__io__flash.md#a99227cd93d2b6230be7bd5cef9fb8232), [bt\_mesh\_dfd\_srv](structbt__mesh__dfd__srv.md#a52b10a938105d0fb22e72e30fc92df5c)
- area\_id : [bt\_mesh\_blob\_io\_flash](structbt__mesh__blob__io__flash.md#a3b506d86d9cc7fb7206f96cbdd2cd3fe), [img\_mgmt\_state](structimg__mgmt__state.md#a4da29c0c4b525463cce3f0d3ffbed633), [img\_mgmt\_upload\_action](structimg__mgmt__upload__action.md#a6c9248e3c21325ed99ff8cf765f3ac82)
- arg : [sdhc\_command](structsdhc__command.md#af6b98d5f1cecf25af2480b1d359f200e), [shared\_vector\_desc\_t](structshared__vector__desc__t.md#a4ab5f28adbb5115ca6a37a3ab6c5328e)
- arg0 : [rtio\_sqe](structrtio__sqe.md#a438d2156a61aef9ca840af9c01d5dfa4)
- arg0\_history : [fake\_can\_add\_rx\_filter\_Fake](structfake__can__add__rx__filter__Fake.md#a53ee3dde1b6ced22e58602d893f3d2f9), [fake\_can\_get\_capabilities\_Fake](structfake__can__get__capabilities__Fake.md#a6b17d900a403bc6f9b937a334deda02a), [fake\_can\_get\_core\_clock\_Fake](structfake__can__get__core__clock__Fake.md#a977411871f80bf3660c56ca95aafec4f), [fake\_can\_get\_max\_filters\_Fake](structfake__can__get__max__filters__Fake.md#aeafbc134795c08a0da417352a78f32d7), [fake\_can\_get\_state\_Fake](structfake__can__get__state__Fake.md#a5c405d3ba0cd766e745103a6e8065239), [fake\_can\_recover\_Fake](structfake__can__recover__Fake.md#a3833492b2003d3936ba0bc1d1d39c50d), [fake\_can\_remove\_rx\_filter\_Fake](structfake__can__remove__rx__filter__Fake.md#a56275f173f6ae79a2baa2b5fd6f53335), [fake\_can\_send\_Fake](structfake__can__send__Fake.md#a3537b8b901274f1bbdb508e52a180f95), [fake\_can\_set\_mode\_Fake](structfake__can__set__mode__Fake.md#a4c6b9383a5b18f4910daac77b0b551f4), [fake\_can\_set\_state\_change\_callback\_Fake](structfake__can__set__state__change__callback__Fake.md#ab38acb1d5b28cdbdb091354f0831adb1), [fake\_can\_set\_timing\_data\_Fake](structfake__can__set__timing__data__Fake.md#a34f4146ceabf0e70469bf7bde574e95a), [fake\_can\_set\_timing\_Fake](structfake__can__set__timing__Fake.md#a688e98a0b933b87bc6294636e509252c), [fake\_can\_start\_Fake](structfake__can__start__Fake.md#a074da35cf170f2c4c4e85c79d23bca68), [fake\_can\_stop\_Fake](structfake__can__stop__Fake.md#a8ed74f448aeee4b7c9527b6352184587)
- arg0\_val : [fake\_can\_add\_rx\_filter\_Fake](structfake__can__add__rx__filter__Fake.md#a1e2b32f5a776ca085afa7bbb3035f68e), [fake\_can\_get\_capabilities\_Fake](structfake__can__get__capabilities__Fake.md#a4e878d672c24276eea068c02bf4697f8), [fake\_can\_get\_core\_clock\_Fake](structfake__can__get__core__clock__Fake.md#aabc10869c39d8a43999a270758da250e), [fake\_can\_get\_max\_filters\_Fake](structfake__can__get__max__filters__Fake.md#af40b1b22072b32296af68ee2412eedb1), [fake\_can\_get\_state\_Fake](structfake__can__get__state__Fake.md#a93bbc7bfdc30a157004fddcfdf7094a6), [fake\_can\_recover\_Fake](structfake__can__recover__Fake.md#aee2a6a7afd5670aec8f270b280d1ae19), [fake\_can\_remove\_rx\_filter\_Fake](structfake__can__remove__rx__filter__Fake.md#ab0e2060727803583d9f6e809e82e6655), [fake\_can\_send\_Fake](structfake__can__send__Fake.md#aa3dbf1075324f019f5127ddbd3e08c11), [fake\_can\_set\_mode\_Fake](structfake__can__set__mode__Fake.md#a9928da668bcfbba6bda0bc14e9806529), [fake\_can\_set\_state\_change\_callback\_Fake](structfake__can__set__state__change__callback__Fake.md#abffb5229e088812b05d40c7a4ba64200), [fake\_can\_set\_timing\_data\_Fake](structfake__can__set__timing__data__Fake.md#a222b9dd263e0678699f8ed5f0734d9d8), [fake\_can\_set\_timing\_Fake](structfake__can__set__timing__Fake.md#a7de46773faeadeece1b74604a4041a0b), [fake\_can\_start\_Fake](structfake__can__start__Fake.md#af83d2ccd63409fdc9e6e8625f7869f49), [fake\_can\_stop\_Fake](structfake__can__stop__Fake.md#a93954796bac5b7d43868a4faf4486abb)
- arg1\_history : [fake\_can\_add\_rx\_filter\_Fake](structfake__can__add__rx__filter__Fake.md#ac6ca6374922f1c3833b95163efd597cc), [fake\_can\_get\_capabilities\_Fake](structfake__can__get__capabilities__Fake.md#ad0956c317d73e8267f1263a9dc3ef828), [fake\_can\_get\_core\_clock\_Fake](structfake__can__get__core__clock__Fake.md#abb94cd7772bcc939eaf2ece23fea38b1), [fake\_can\_get\_max\_filters\_Fake](structfake__can__get__max__filters__Fake.md#a23f9c766494bd5202774cdd2cc75c6a1), [fake\_can\_get\_state\_Fake](structfake__can__get__state__Fake.md#a6920bd0ad00e3f4eb0765e6035d2f9b2), [fake\_can\_recover\_Fake](structfake__can__recover__Fake.md#ac4bf1fbda3be37cee5904b6781e52e8d), [fake\_can\_remove\_rx\_filter\_Fake](structfake__can__remove__rx__filter__Fake.md#a5eb3c0e60321e69b60156b746377e5d2), [fake\_can\_send\_Fake](structfake__can__send__Fake.md#a1aa63a3a414eb9d731937b5ba7f790f0), [fake\_can\_set\_mode\_Fake](structfake__can__set__mode__Fake.md#a55c7132af00a33b4d75ead611cf6504b), [fake\_can\_set\_state\_change\_callback\_Fake](structfake__can__set__state__change__callback__Fake.md#a57eebc27313a2232297514e411168e7d), [fake\_can\_set\_timing\_data\_Fake](structfake__can__set__timing__data__Fake.md#a72683050fd32ae66b6766c86a5ad8f9e), [fake\_can\_set\_timing\_Fake](structfake__can__set__timing__Fake.md#a6b8a9f5f0252913cf7ddd1d853ea85cd)
- arg1\_val : [fake\_can\_add\_rx\_filter\_Fake](structfake__can__add__rx__filter__Fake.md#a9f820096dedce016f922ab2266c2508c), [fake\_can\_get\_capabilities\_Fake](structfake__can__get__capabilities__Fake.md#a4c8f706be4cf95f03d41e191b3f61205), [fake\_can\_get\_core\_clock\_Fake](structfake__can__get__core__clock__Fake.md#adba579c74856f304de97dbc051ce43df), [fake\_can\_get\_max\_filters\_Fake](structfake__can__get__max__filters__Fake.md#aed473df95baf56f79478994231dd76af), [fake\_can\_get\_state\_Fake](structfake__can__get__state__Fake.md#a8bec740c46caf4bd4b2b8b79bfc19364), [fake\_can\_recover\_Fake](structfake__can__recover__Fake.md#a6c758d3fa7f15414370ec14b48fe7fbb), [fake\_can\_remove\_rx\_filter\_Fake](structfake__can__remove__rx__filter__Fake.md#ad37cc173abf16fd381935e090766eefa), [fake\_can\_send\_Fake](structfake__can__send__Fake.md#a976958722e013359afcd94ce554fe652), [fake\_can\_set\_mode\_Fake](structfake__can__set__mode__Fake.md#aa93922d5a25c05d79b951e943e732d99), [fake\_can\_set\_state\_change\_callback\_Fake](structfake__can__set__state__change__callback__Fake.md#adc0c50863c1e2c4a0596b02b6f8fe095), [fake\_can\_set\_timing\_data\_Fake](structfake__can__set__timing__data__Fake.md#a2df927faec6f4d81333e892f37ad8d7d), [fake\_can\_set\_timing\_Fake](structfake__can__set__timing__Fake.md#a1745c5d00bf3f6bc06157c14bd6d4892)
- arg2\_history : [fake\_can\_add\_rx\_filter\_Fake](structfake__can__add__rx__filter__Fake.md#a174251aed70777a0ee91b56af6c5a7d4), [fake\_can\_get\_state\_Fake](structfake__can__get__state__Fake.md#a8ab48d1bc94d252a85765262d637a18b), [fake\_can\_send\_Fake](structfake__can__send__Fake.md#ac0aa1946dbca3efb1256756124a594cd), [fake\_can\_set\_state\_change\_callback\_Fake](structfake__can__set__state__change__callback__Fake.md#a26561def01144c85b9dadffe06b1cb02)
- arg2\_val : [fake\_can\_add\_rx\_filter\_Fake](structfake__can__add__rx__filter__Fake.md#ad3e5768cf52549e127fb656c4074739c), [fake\_can\_get\_state\_Fake](structfake__can__get__state__Fake.md#a8d39a3a2e910d31b3c1b31c997157f7e), [fake\_can\_send\_Fake](structfake__can__send__Fake.md#a65483a432f087241c05a35e0f6d55189), [fake\_can\_set\_state\_change\_callback\_Fake](structfake__can__set__state__change__callback__Fake.md#a877ef95c441bdcf8b23150f25f54e8d9)
- arg3\_history : [fake\_can\_add\_rx\_filter\_Fake](structfake__can__add__rx__filter__Fake.md#af71cfd10e61bea9c837b29c73cfa6a1e), [fake\_can\_send\_Fake](structfake__can__send__Fake.md#a271db15349005a658faf23983b8fef93)
- arg3\_val : [fake\_can\_add\_rx\_filter\_Fake](structfake__can__add__rx__filter__Fake.md#a58dd0100d6b39028b0702d429c4b457e), [fake\_can\_send\_Fake](structfake__can__send__Fake.md#afe78e6d75712abd6113ce1a7bc259404)
- arg4\_history : [fake\_can\_send\_Fake](structfake__can__send__Fake.md#a1fb146928dc3d81650228ef4bb77ff0a)
- arg4\_val : [fake\_can\_send\_Fake](structfake__can__send__Fake.md#aac0a0cb0a511dd54276fe822c87ac145)
- arg\_histories\_dropped : [fake\_can\_add\_rx\_filter\_Fake](structfake__can__add__rx__filter__Fake.md#a2033cd767b8e6a83c178541b5a96a18d), [fake\_can\_get\_capabilities\_Fake](structfake__can__get__capabilities__Fake.md#a15786c39c175a417e5d2b75c66cb56c0), [fake\_can\_get\_core\_clock\_Fake](structfake__can__get__core__clock__Fake.md#aadcac948228154253f906f88dddb629a), [fake\_can\_get\_max\_filters\_Fake](structfake__can__get__max__filters__Fake.md#a5ef346d34d652561570acf959212025a), [fake\_can\_get\_state\_Fake](structfake__can__get__state__Fake.md#a2d5fdb64a74af8f75869f0a5f0a02e39), [fake\_can\_recover\_Fake](structfake__can__recover__Fake.md#a6b82557dcc63f875b8ffb4c4c78b2166), [fake\_can\_remove\_rx\_filter\_Fake](structfake__can__remove__rx__filter__Fake.md#ae5f621c8c579bc1e4a37c45520bd2322), [fake\_can\_send\_Fake](structfake__can__send__Fake.md#ac5fe8ae37315e3117373589e27192791), [fake\_can\_set\_mode\_Fake](structfake__can__set__mode__Fake.md#adc0c33d124baf7c1310d4c5fae9539f8), [fake\_can\_set\_state\_change\_callback\_Fake](structfake__can__set__state__change__callback__Fake.md#a265b73064807e6f3b69595118ea17011), [fake\_can\_set\_timing\_data\_Fake](structfake__can__set__timing__data__Fake.md#a59cf453641e0294978049af949346944), [fake\_can\_set\_timing\_Fake](structfake__can__set__timing__Fake.md#af15aad2f982ba7b8c7d7c0771196f66c), [fake\_can\_start\_Fake](structfake__can__start__Fake.md#a27249cafd98f3097ba5f294804ca5ed9), [fake\_can\_stop\_Fake](structfake__can__stop__Fake.md#a095753248ea5a5fb5aa4b5e82e208b5e)
- arg\_history\_len : [fake\_can\_add\_rx\_filter\_Fake](structfake__can__add__rx__filter__Fake.md#a83d8cdd2ed74d7d3718eac833b565182), [fake\_can\_get\_capabilities\_Fake](structfake__can__get__capabilities__Fake.md#a8a817c61d4554aa835db9fb2609b9042), [fake\_can\_get\_core\_clock\_Fake](structfake__can__get__core__clock__Fake.md#a289f41f54261be87b774c35769498321), [fake\_can\_get\_max\_filters\_Fake](structfake__can__get__max__filters__Fake.md#abc3ac21861e378d216b46fe26d19a8f0), [fake\_can\_get\_state\_Fake](structfake__can__get__state__Fake.md#a54b23d388d2a92f5fd5354471bf68eb1), [fake\_can\_recover\_Fake](structfake__can__recover__Fake.md#a40e5bdcbd8380ab47825e958588ee421), [fake\_can\_remove\_rx\_filter\_Fake](structfake__can__remove__rx__filter__Fake.md#a558bafd009b860c1b36d0bdf49044826), [fake\_can\_send\_Fake](structfake__can__send__Fake.md#a70d2168170574d8d2f2a238690537bfd), [fake\_can\_set\_mode\_Fake](structfake__can__set__mode__Fake.md#aa01b199e2a8c1873f27bb8da2ded5c7c), [fake\_can\_set\_state\_change\_callback\_Fake](structfake__can__set__state__change__callback__Fake.md#a665ffac5d8c9f9224acfb4359cc6d7c1), [fake\_can\_set\_timing\_data\_Fake](structfake__can__set__timing__data__Fake.md#aff821fda6a3a93f182c190691ed5db58), [fake\_can\_set\_timing\_Fake](structfake__can__set__timing__Fake.md#aa55f26cd013da19bf650f25b66784321), [fake\_can\_start\_Fake](structfake__can__start__Fake.md#a27cf1e156c7a1c38535645e8b54a615e), [fake\_can\_stop\_Fake](structfake__can__stop__Fake.md#aeae352bcb02853ec7815af75859ffb53)
- argc : [modem\_chat](structmodem__chat.md#ad08436ccb8308912a6d45b3b11cc0c59)
- args : [shell\_static\_entry](structshell__static__entry.md#a73951d31712342c0c0545a142059d367)
- argv : [modem\_chat](structmodem__chat.md#ae7a2d23e34f95d3c3c5d5df15af1571a), [modem\_chat\_config](structmodem__chat__config.md#ae2afa6465bfad9c83dd57498165888b4)
- argv\_size : [modem\_chat](structmodem__chat.md#ac1c71497eb22137bc4a03877b6f30b37), [modem\_chat\_config](structmodem__chat__config.md#a2cf551a0946459b2825595026ebc7490)
- array : [json\_obj\_descr](structjson__obj__descr.md#ac12783b89f5507bef7fa3da2c56d1d61)
- assign\_device : [xen\_domctl](structxen__domctl.md#a2897a77b7aafa6bb91e8390a53027b00)
- async : [modem\_backend\_uart](structmodem__backend__uart.md#a387327d6378834136fe6a0e80cec7337)
- async\_map : [lcp\_options](structlcp__options.md#a2672e1374c25aac1571adccadda5283e)
- async\_on : [clock\_control\_driver\_api](structclock__control__driver__api.md#a9a4a9a2ed1f0b80e48ee0f50469c72dc)
- async\_rx : [shell\_uart\_async](structshell__uart__async.md#a2410eaa1860e6f00ed12ceab5927bbed)
- async\_rx\_config : [shell\_uart\_async](structshell__uart__async.md#a96f02b1cd55c7ee2edba7277e105c32d)
- ate\_wra : [nvs\_fs](structnvs__fs.md#aba5caa7709d58fa018cbb91db085f140)
- atomic : [dma\_context](structdma__context.md#a5b5776088155c9f19488d479924bec8e)
- att\_mtu\_updated : [bt\_gatt\_cb](structbt__gatt__cb.md#a93fe1a626ab59c38ef56f02671f88980)
- attach : [mipi\_dsi\_driver\_api](structmipi__dsi__driver__api.md#a17ebe7832179f0f57d6bf89d631ba16c), [uart\_mux\_driver\_api](structuart__mux__driver__api.md#a312a7c8724c885d9f8fdcd9434ce44c2), [virtual\_interface\_api](structvirtual__interface__api.md#a753258a8929347877997ca5d6a76eb8c)
- attached\_dev : [i3c\_driver\_data](structi3c__driver__data.md#ae64e0be2d004d67900c11adf46630901)
- attention\_status : [bt\_mesh\_health\_cli](structbt__mesh__health__cli.md#ae8d023ac56beb39c0d73a3b9e75f6c96)
- attn\_off : [bt\_mesh\_health\_srv\_cb](structbt__mesh__health__srv__cb.md#abd881db6cf849433808bc6464e109b60)
- attn\_on : [bt\_mesh\_health\_srv\_cb](structbt__mesh__health__srv__cb.md#ad9e8a392943d4848190c4513327bc52c)
- attn\_timer : [bt\_mesh\_health\_srv](structbt__mesh__health__srv.md#a8df7f6c7e434cb717b9b51a3167b5e86)
- attr : [arc\_mpu\_region](structarc__mpu__region.md#abc3ff764104a4db2d986f30eed370e4a), [arm\_mpu\_region](structarm__mpu__region.md#aa94b10ac6e6780c154c25cee91e7921e), [bt\_gatt\_indicate\_params](structbt__gatt__indicate__params.md#acbbee3a71838492416b20bb5cff89801), [bt\_gatt\_notify\_params](structbt__gatt__notify__params.md#a6187d0457763a15a623129e3e9e98e13), [k\_mem\_partition](structk__mem__partition.md#ada951ba1ec9429c98c16761e3093eedb), [nxp\_mpu\_region](structnxp__mpu__region.md#ae65b1431b50409b1db810dd7f286e286), [nxp\_mpu\_region\_attr](structnxp__mpu__region__attr.md#aed105c7df45c7b9dd4c2a0bf89f6b16f), [shared\_multi\_heap\_region](structshared__multi__heap__region.md#a5fcdce28a57be4b652a9a53a70ae796f), [sys\_mm\_drv\_region](structsys__mm__drv__region.md#a6838fe4bd4daab440152c4d666a4597d)
- attr\_count : [bt\_gatt\_service](structbt__gatt__service.md#a87d8316a92ae04678d7be0ae76ed86cb), [bt\_gatt\_service\_static](structbt__gatt__service__static.md#a84c35a391e372396e2ec89eaf0d4d047), [bt\_sdp\_record](structbt__sdp__record.md#a2bbcb54c385f88d512c1ccd4cf5e05ff)
- attr\_get : [ieee802154\_radio\_api](structieee802154__radio__api.md#a0b3e0ed1385dd428c861e08c79849ef4), [sensor\_driver\_api](structsensor__driver__api.md#a3e28950f844c3f8b8da5ba9ff8052e46)
- attr\_handle : [bt\_gatt\_discover\_params](structbt__gatt__discover__params.md#a65ca3c9aad7c02d48fd35c4d6f69dc70)
- attr\_set : [sensor\_driver\_api](structsensor__driver__api.md#a2d230a976b19a699d132034f58bb2b6a)
- attri : [sensing\_sensor\_config](structsensing__sensor__config.md#a9bdf50a1018d6d9426efd991d05bf72b)
- attrib : [uhc\_transfer](structuhc__transfer.md#ade24e9892c5c2d87f76cd3898c11304e)
- Attributes : [usb\_ep\_descriptor](structusb__ep__descriptor.md#a6be879be0aac0c679c9d50bbaa9e6dda)
- attributes : [coap\_core\_metadata](structcoap__core__metadata.md#aeb04ef8b47ecc144dd036007cccd2e59), [gdb\_mem\_region](structgdb__mem__region.md#ad8ae6acf6950428a9846a25fb0219eeb), [udc\_ep\_config](structudc__ep__config.md#acbeab755d1b03da0c58f43aff5bd7d00)
- attrs : [arm\_mmu\_region](structarm__mmu__region.md#acd528aff43956e69e17e70100a109604), [bt\_gatt\_service](structbt__gatt__service.md#a0281e96ab54519df641f6c489fdc6b5b), [bt\_gatt\_service\_static](structbt__gatt__service__static.md#a38f9e02241fe37f68df5dd8782b59e9f), [bt\_sdp\_record](structbt__sdp__record.md#ad8ee5b17c45ca32696a492bc9c62d4fd), [k\_mem\_partition\_attr\_t](structk__mem__partition__attr__t.md#a4e49930c31e896b9b52867d6b83e3ae7), [xtensa\_mmu\_range](structxtensa__mmu__range.md#ac0ff0bdc3091d2bd8d1b48b8a383a9a5)
- augmented : [pd\_rdo](unionpd__rdo.md#ad6b45a879e689dcd05bf9e07aedc4d20)
- auth\_payload\_timeout : [bt\_hci\_cp\_write\_auth\_payload\_timeout](structbt__hci__cp__write__auth__payload__timeout.md#a385c88012b09ec561b9ba7edaadeb574), [bt\_hci\_rp\_read\_auth\_payload\_timeout](structbt__hci__rp__read__auth__payload__timeout.md#ab4092720dad9a01f4e179eb2f0112aed)
- auth\_proto : [lcp\_options](structlcp__options.md#a560d009cb642fff99ef83a9e6c056c6b)
- auth\_req : [bt\_conn\_pairing\_feat](structbt__conn__pairing__feat.md#af9a977b1e0f9d4eada26a82d92eaec54)
- authentication : [bt\_hci\_cp\_io\_capability\_reply](structbt__hci__cp__io__capability__reply.md#a8983418dca3a7725f3b113a4d0ee177e), [bt\_hci\_evt\_io\_capa\_resp](structbt__hci__evt__io__capa__resp.md#a160cb3aea96bf698520e11673a40b2d7)
- authorize : [bt\_tbs\_cb](structbt__tbs__cb.md#ab7c859ffaebcf16db71c5d54bd4f5802)
- auto\_ack\_fpb : [ieee802154\_config](structieee802154__config.md#ab27a654a0d53f268199e95dc21e18fd4)
- autoflush : [shell\_fprintf\_control\_block](structshell__fprintf__control__block.md#a70f4ae1d5268a35d009e97d267b44e2f)
- autostart : [log\_backend](structlog__backend.md#afe5ce6ac891bef0264dabafe18db88a2)
- available : [stream\_flash\_ctx](structstream__flash__ctx.md#afbaf8abad7ff12865863dc4108ee8ad2)
- available\_contexts : [bt\_bap\_unicast\_client\_cb](structbt__bap__unicast__client__cb.md#ac49c3b8283552213623608498a7befd2)
- avg\_current : [fuel\_gauge\_prop\_val](unionfuel__gauge__prop__val.md#ad96f07db337c038466dd17401c076d38)
- avl : [segment\_descriptor](structsegment__descriptor.md#a59e97c4fc79505fd8095d02edc01480f)
- azimuth : [gnss\_satellite](structgnss__satellite.md#a27a864422f5207b5d38efbd8b50893a3)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
